--- a/SanguineGenesis/SanguineGenesis.csproj
+++ b/SanguineGenesis/SanguineGenesis.csproj
@@ -122,11 +122,11 @@
     <Compile Include="GUI\MainMenuWindow.Designer.cs">
       <DependentUpon>MainMenuWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="GUI\MainWindow.cs">
+    <Compile Include="GUI\GameWindow.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\MainWindow.Designer.cs">
-      <DependentUpon>MainWindow.cs</DependentUpon>
+    <Compile Include="GUI\GameWindow.Designer.cs">
+      <DependentUpon>GameWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\WinFormsComponents\AdditionalInfo.cs">
       <SubType>Component</SubType>
@@ -195,8 +195,8 @@
     <EmbeddedResource Include="GUI\MainMenuWindow.resx">
       <DependentUpon>MainMenuWindow.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUI\MainWindow.resx">
-      <DependentUpon>MainWindow.cs</DependentUpon>
+    <EmbeddedResource Include="GUI\GameWindow.resx">
+      <DependentUpon>GameWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
