Fixed bug with building FERN in the water. Majestic rock has now size 1. Renamed things. Added better descriptions.

--- a/SanguineGenesis/SanguineGenesis.csproj
+++ b/SanguineGenesis/SanguineGenesis.csproj
@@ -84,7 +84,7 @@
     <Compile Include="GameLogic\Data\Abilities\ImproveStructure.cs" />
     <Compile Include="GameLogic\Data\Abilities\Jump.cs" />
     <Compile Include="GameLogic\Data\Abilities\Kick.cs" />
-    <Compile Include="GameLogic\Data\Abilities\KnockBack.cs" />
+    <Compile Include="GameLogic\Data\Abilities\KnockAway.cs" />
     <Compile Include="GameLogic\Data\Abilities\MoveTo.cs" />
     <Compile Include="GameLogic\Data\Abilities\PiercingBite.cs" />
     <Compile Include="GameLogic\Data\Abilities\PoisonousSpit.cs" />
