Updated nuget packages.

--- a/SanguineGenesis/SanguineGenesis.csproj
+++ b/SanguineGenesis/SanguineGenesis.csproj
@@ -43,11 +43,11 @@
     <Reference Include="GlmNet, Version=0.7.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\GlmNet.0.7.0\lib\net40\GlmNet.dll</HintPath>
     </Reference>
-    <Reference Include="SharpGL, Version=2.4.1.2, Culture=neutral, PublicKeyToken=27fc851303210b27, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpGL.2.4.1.2\lib\net40-client\SharpGL.dll</HintPath>
+    <Reference Include="SharpGL, Version=2.4.4.0, Culture=neutral, PublicKeyToken=27fc851303210b27, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpGL.2.4.4\lib\net40-client\SharpGL.dll</HintPath>
     </Reference>
-    <Reference Include="SharpGL.WinForms, Version=2.4.1.2, Culture=neutral, PublicKeyToken=27fc851303210b27, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpGL.WinForms.2.4.1.2\lib\net40\SharpGL.WinForms.dll</HintPath>
+    <Reference Include="SharpGL.WinForms, Version=2.4.4.0, Culture=neutral, PublicKeyToken=27fc851303210b27, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpGL.WinForms.2.4.4\lib\net40\SharpGL.WinForms.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -196,6 +196,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\GameWindow.resx">
       <DependentUpon>GameWindow.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -241,14 +242,6 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="giraffe.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="SharpGL.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="SharpGL.ico" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\Icons\Animals\aligator.png">
@@ -920,6 +913,12 @@
     <None Include="Images\Icons\Abilities\herbivore_eat.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="SharpGL.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="SharpGL.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
